Improved typing of the code. As type hint for parser and lexer is not possible (due to lack of types in sly package), these two have been ignored in the pyright config.

--- a/pyrightconfig.json
+++ b/pyrightconfig.json
@@ -2,6 +2,10 @@
     "include": [
         "./src/**"
     ],
+    "exclude": [
+        "./src/kharazmi/lexer.py",
+        "./src/kharazmi/parser.py",
+    ],
     "strict": [
         // "./src/**"
     ],
